# dataset-tools

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  README.md  build-log.txt  build_test_log.txt  log  vcpkg.json
examples/minimal-appshell/: CMakeLists.txt  CounterPage.cpp  CounterPage.h  HelloPage.cpp  HelloPage.h  main.cpp
src/: CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/AudioSlicer/: CMakeLists.txt  main.cpp
src/apps/FoxBreatheLabeler/: CMakeLists.txt  main.cpp
src/apps/GameInfer/: CMakeLists.txt  GameInferKeys.h  GameInferService.cpp  GameInferService.h  main.cpp
src/apps/HubertFA/: CMakeLists.txt  main.cpp
src/apps/LyricFA/: Asr.cpp  Asr.h  CMakeLists.txt  main.cpp
src/apps/MinLabel/: CMakeLists.txt  MinLabelKeys.h  main.cpp
src/apps/PhonemeLabeler/: CMakeLists.txt  PhonemeLabelerKeys.h  main.cpp
src/apps/PitchLabeler/: CMakeLists.txt  PitchLabelerKeys.h  main.cpp
src/apps/SlurCutter/: CMakeLists.txt  SlurCutterKeys.h  main.cpp
src/apps/SomeInfer/: CMakeLists.txt  main.cpp  qasc_exec.cmake
src/apps/TestShell/: CMakeLists.txt  main.cpp
src/apps/WidgetGallery/: CMakeLists.txt
src/apps/cli/: CMakeLists.txt  main.cpp
src/apps/ds-labeler/: AudacityMarkerIO.cpp  AudacityMarkerIO.h  AudioFileListPanel.cpp  AudioFileListPanel.h  AutoCompleteService.cpp  AutoCompleteService.h  CMakeLists.txt  DsLabelerKeys.h  DsMinLabelPage.cpp  DsMinLabelPage.h  DsPhonemeLabelerPage.cpp  DsPhonemeLabelerPage.h  DsPitchLabelerPage.cpp  DsPitchLabelerPage.h  DsSlicerPage.cpp  DsSlicerPage.h  ExportPage.cpp  ExportPage.h  LayerDependencyGraph.cpp  LayerDependencyGraph.h  NewProjectDialog.cpp  NewProjectDialog.h  ProjectDataSource.cpp  ProjectDataSource.h  ProjectSettingsBackend.cpp  ProjectSettingsBackend.h  SettingsPage.cpp  SettingsPage.h  SliceCommands.cpp  SliceExportDialog.cpp  SliceListPanel.cpp  SliceListPanel.h  SliceNumberLayer.cpp  SliceNumberLayer.h  SlicerListPanel.cpp  SlicerListPanel.h  WelcomePage.cpp  main.cpp
src/apps/game-infer-app/: CMakeLists.txt  main.cpp
src/apps/hfa-cli/: CMakeLists.txt  main.cpp
src/apps/label-suite/: AppSettingsBackend.h  CMakeLists.txt  CleanupDialog.cpp  CleanupDialog.h  FileDataSource.cpp  FileDataSource.h  TaskWindowAdapter.cpp  TaskWindowAdapter.h  main.cpp
src/apps/labeler/: CMakeLists.txt  CleanupDialog.cpp  CleanupDialog.h  LabelerWindow.cpp  LabelerWindow.h  StepNavigator.cpp  StepNavigator.h  StepPlugins.cpp  StepPlugins.h  TaskWindowAdapter.cpp  TaskWindowAdapter.h  main.cpp
src/apps/labeler-interfaces/: CMakeLists.txt
src/apps/min-label/: CMakeLists.txt  MinLabelKeys.h  res.qrc
src/apps/phoneme-labeler/: CMakeLists.txt  PhonemeLabelerKeys.h  main.cpp
src/apps/pipeline/: CMakeLists.txt  PipelineKeys.h  PipelinePage.cpp  PipelinePage.h  PipelineWindow.cpp  PipelineWindow.h  main.cpp
src/apps/pitch-labeler/: CMakeLists.txt  PitchLabelerKeys.h  main.cpp
src/apps/shared/: CMakeLists.txt
src/apps/test-shell/: CMakeLists.txt
src/apps/unified-editor/: CMakeLists.txt
src/apps/widget-gallery/: CMakeLists.txt  main.cpp
src/audio/: CMakeLists.txt
src/audio/src/: AudioDecoder.cpp  AudioPlayback.cpp  AudioPlayer.cpp
src/core/: CMakeLists.txt
src/core/src/: AppInit.cpp  AppSettings.cpp  AsyncTask.cpp  AudioFileResolver.cpp  Config.cpp  CsvToDsConverter.cpp  DsDocument.cpp  DsDocumentAdapter.cpp  DsItemManager.cpp  DsProject.cpp  ExportFormats.cpp  F0Curve.cpp  FramelessHelper.cpp  JsonHelper.cpp  LocalFileIOProvider.cpp  ModelDownloader.cpp  ModelManager.cpp  PhNumCalculator.cpp  PitchUtils.cpp  ServiceLocator.cpp  TextGridDocumentAdapter.cpp  TextGridToCsv.cpp  Theme.cpp  TranscriptionCsv.cpp
src/domain/: CMakeLists.txt
src/domain/src/: ConfigMigration.cpp  CsvToDsConverter.cpp  CurveTools.cpp  DomainAdapters.cpp  DsDocument.cpp  DsDocumentAdapter.cpp  DsItemManager.cpp  DsPitchDocument.cpp  DsProject.cpp  DsTextDocument.cpp  ExportFormats.cpp  F0Curve.cpp  IEditorDataSource.cpp  LayerSerialization.cpp  ModelDownloader.cpp  ModelManager.cpp  PathResolvers.cpp  PhNumCalculator.cpp  PinyinG2PProvider.cpp  PitchMath.cpp  PitchUtils.cpp  ProjectBackupManager.cpp  ProjectPaths.cpp  QualityMetrics.cpp  TranscriptionPipeline.cpp
src/engine/: CMakeLists.txt
src/engine/adapters/: CMakeLists.txt
src/engine/engines/: CMakeLists.txt
src/framework/: CMakeLists.txt
src/framework/audio/: CMakeLists.txt
src/framework/base/: CMakeLists.txt
src/framework/core/: CMakeLists.txt
src/framework/infer/: CMakeLists.txt
src/framework/signal/: CMakeLists.txt
src/framework/types/: CMakeLists.txt
src/framework/ui-core/: CMakeLists.txt
src/framework/widgets/: CMakeLists.txt
src/infer/: CMakeLists.txt
src/infer/FunAsr/: CMakeLists.txt
src/infer/audio-util/: CMakeLists.txt  audio-utilConfig.cmake.in
src/infer/common/: CMakeLists.txt
src/infer/game-infer/: .gitignore  CMakeLists.txt
src/infer/hubert-infer/: CMakeLists.txt  hubert-inferConfig.cmake.in
src/infer/moe-infer/: CMakeLists.txt
src/infer/rmvpe-infer/: .clang-format  CMakeLists.txt  rmvpe-inferConfig.cmake.in
src/infer/some-infer/: CMakeLists.txt  some-inferConfig.cmake.in
src/libs/: CMakeLists.txt
src/libs/AsyncTaskWindow/: AsyncTaskWindowConfig.cmake.in  CMakeLists.txt
src/libs/FastASR/: CMakeLists.txt
src/libs/FunAsr/: CMakeLists.txt
src/libs/RapidASR/: CMakeLists.txt  README.md
src/libs/audio-util/: CMakeLists.txt
src/libs/ffmpegdecoder/: CMakeLists.txt  FFmpegDecoder.h
src/libs/game-infer/: CMakeLists.txt  game-inferConfig.cmake.in
src/libs/game-infer-lib/: CMakeLists.txt  GameMidiProcessor.cpp  GameMidiProcessor.h
src/libs/gameinfer/: CMakeLists.txt  GameInferService.cpp  GameInferService.h  GameMidiProcessor.cpp  GameMidiProcessor.h
src/libs/hubert-fa/: CMakeLists.txt  HfaTask.h  HubertAlignmentProcessor.cpp  HubertAlignmentProcessor.h
src/libs/hubertfa/: CMakeLists.txt  (+5 more)
src/tests/: CMakeLists.txt
src/types/: CMakeLists.txt
src/ui-core/: CMakeLists.txt
src/widgets/: CMakeLists.txt
(+1757 files in other folders)
